@@ -26,7 +26,6 @@ enum {
 	SP_ATTR_ID,
 	/* SPItem */
 	SP_ATTR_TRANSFORM,
-	SP_ATTR_CLIP_PATH,
 	SP_ATTR_SODIPODI_INSENSITIVE,
 	SP_ATTR_STYLE,
 	/* SPAnchor */
